--- a/labs/02-vision/03-custom-vision-image-classification/C-Sharp/test-classifier/test-classifier.csproj
+++ b/labs/02-vision/03-custom-vision-image-classification/C-Sharp/test-classifier/test-classifier.csproj
@@ -1,20 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp7.0</TargetFramework>
-    <RootNamespace>test_classifier</RootNamespace>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <None Update="appsettings.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.9" />
-  </ItemGroup>
-
-
+    <PropertyGroup>
+        <OutputType>Exe</OutputType>
+        <TargetFramework>NET9.0</TargetFramework>
+        <RootNamespace>test_classifier</RootNamespace>
+    </PropertyGroup>
+    <ItemGroup>
+        <None Update="appsettings.json">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+    </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.Configuration.Json"
+                          Version="3.1.9" />
+    </ItemGroup>
 </Project>
