--- a/labs/05-doc-intelligence/01-custom-document-intelligence/custom-di/test-model.csproj
+++ b/labs/05-doc-intelligence/01-custom-document-intelligence/custom-di/test-model.csproj
@@ -2,9 +2,12 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>NET9.0</TargetFramework>
-        <RootNamespace>qna_app</RootNamespace>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
     <ItemGroup>
+        <PackageReference Include="Azure.AI.FormRecognizer"
+                          Version="4.1.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Json"
                           Version="3.1.3" />
     </ItemGroup>
