--- a/labs/05-doc-intelligence/01-custom-document-intelligence/custom-di/test-model.csproj
+++ b/labs/05-doc-intelligence/01-custom-document-intelligence/custom-di/test-model.csproj
@@ -15,5 +15,8 @@
         <None Update="appsettings.json">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
+        <None Update="data\**">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 </Project>
