Refactor provisioning scripts and update appsettings.json
- Removed cognitive services account creation and related commands from provision-custom-vision.azcli to streamline the provisioning process.
- Updated appsettings.json to replace the sensitive AIServicesKey with a placeholder value for security purposes.

--- a/demos/03-language/01-entity-extraction/custom-entities/appsettings.json
+++ b/demos/03-language/01-entity-extraction/custom-entities/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AIServicesEndpoint": "https://westeurope.api.cognitive.microsoft.com/",
-  "AIServicesKey": "e45c06664895453f9b5544aac0730e7c",
+  "AIServicesKey": "<your key>",
   "Project": "CustomEntityLab",
   "Deployment": "AdEntities"
 }
