Update Azure AI Search configurations and improve code formatting
- Modified provision-ai-service.azcli to change location from eastus to westeurope and updated service naming convention.
- Reformatted package references in detect-people.csproj for better readability.
- Cleaned up unnecessary whitespace in Index.cshtml.cs for improved code clarity.
- Updated appsettings.json with the correct SearchServiceEndpoint and SearchServiceQueryApiKey.
- Adjusted modify-search.cmd to reflect the correct URL and admin key for the Azure Search service.
- Corrected variables in modify-search.http to match the updated service endpoint and API key.
- Changed the cognitive services key in skillset.json to the new valid key.
- Revised readme.md to remove unnecessary formatting and ensure clarity regarding Azure AI Search service costs.
- Enhanced the main readme.md for better structure and readability of the content.

--- a/demos/04-knowlege/01-azure-search/margies-travel/appsettings.json
+++ b/demos/04-knowlege/01-azure-search/margies-travel/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "AllowedHosts": "*",
-  "SearchServiceEndpoint": "YOUR_SEARCH_ENDPOINT",
-  "SearchServiceQueryApiKey": "YOUR_SEARCH_QUERY_KEY",
+  "SearchServiceEndpoint": "https://aisearchknowledegeai10222932.search.windows.net",
+  "SearchServiceQueryApiKey": "EipersABuYD426nA1D71E2eNnbkDSs7lGG9ZUXxecbAzSeCEzWSQ",
   "SearchIndexName": "margies-index"
 }
