--- a/demos/02-vision/02-detect-faces/computer-vision/detect-people.csproj
+++ b/demos/02-vision/02-detect-faces/computer-vision/detect-people.csproj
@@ -5,9 +5,12 @@
         <RootNamespace>detect_faces</RootNamespace>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Azure.AI.Vision.ImageAnalysis" Version="1.0.0" />
-        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.2" />
-        <PackageReference Include="System.Drawing.Common" Version="9.0.2" />
+        <PackageReference Include="Azure.AI.Vision.ImageAnalysis"
+                          Version="1.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Json"
+                          Version="9.0.2" />
+        <PackageReference Include="System.Drawing.Common"
+                          Version="9.0.2" />
     </ItemGroup>
     <ItemGroup>
         <None Update="appsettings.json">
