--- a/demos/04-knowlege/01-azure-search/margies-travel/search-client.csproj
+++ b/demos/04-knowlege/01-azure-search/margies-travel/search-client.csproj
@@ -1,15 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
-  <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <RootNamespace>search_client</RootNamespace>
-  </PropertyGroup>
-
+    <PropertyGroup>
+        <TargetFramework>net9.0</TargetFramework>
+        <RootNamespace>search_client</RootNamespace>
+        <Nullable>enable</Nullable>
+        <ImplicitUsings>enable</ImplicitUsings>
+    </PropertyGroup>
     <ItemGroup>
-   
-    <PackageReference Include="Azure.Search.Documents" Version="11.4.0" />
-   
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.32" />
-  </ItemGroup>
-
+        <PackageReference Include="Azure.Search.Documents" Version="11.6.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.3" />
+    </ItemGroup>
 </Project>
