--- a/labs/04-knowledge/01-search-skill/custom-skill-func/.gitignore
+++ b/labs/04-knowledge/01-search-skill/custom-skill-func/.gitignore
@@ -42,7 +42,22 @@ __pycache__/
 *.py[cod]
 *$py.class
 
-# Azurite artifacts
-__blobstorage__
-__queuestorage__
-__azurite_db*__.json
+# Local development settings
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDE
+.idea/
+*.swp
+*.swo
+.vscode/
+*.sublime-workspace
